Update Marathi bird guide PDF and presentation with latest revisions

--- a/latex/bird_guide_marathi_presentation.tex
+++ b/latex/bird_guide_marathi_presentation.tex
@@ -192,8 +192,8 @@
 \end{frame}
 }
 
-% Bird entries (first 10 species)
-\section{शिकारी पक्षी}
+% Bird entries (first 20 species)
+\section{शिकारी पक्षी आणि बगळे}
 \birdslide{घार}{Milvus migrans}
 {घारीएवढा}
 {अतिनेहमी आढळणारा स्थानिक}
@@ -230,7 +230,6 @@
 {मार्च ते जुलै प्रजनन काळ. झाडांवर काड्या-पानांचे घरटे.}
 {shikra.jpg}
 
-\section{जलचर पक्षी}
 \birdslide{पांढऱ्या छातीची पाणकोंबडी}{Amaurornis phoenicurus}
 {बुलबुलापेक्षा मोठी}
 {नेहमी आढळणारा स्थानिक}
@@ -276,7 +275,573 @@
 {जून ते सप्टेंबर प्रजनन काळ. वसाहतीत राहतो.}
 {little-egret.jpg}
 
-\section{समारोप}
+\section{पारवे आणि होले}
+\birdslide{पारवा}{Columba livia}
+{मैनेपेक्षा मोठा}
+{अतिनेहमी आढळणारा स्थानिक}
+{जाडजूड करडा पक्षी. मानेवर इंद्रधनुषी पिसारे. पंखांवर दोन काळे पट्टे, शेपटीवर काळा पट्टा.}
+{परिसरातील इमारती आणि मोकळ्या जागा}
+{कळपाने राहतो. जमिनीवरून धान्य वेचतो. शहरी जीवनाशी जुळवून घेतो.}
+{वर्षभर प्रजनन. इमारतींवर काड्यांचे घरटे.}
+{blue-rock-pigeon.jpg}
+
+\birdslide{ठिपकेवाला होला}{Streptopelia chinensis}
+{मैनेएवढा}
+{नेहमी आढळणारा स्थानिक}
+{बारीक, लांब शेपटीचा पारवा. गुलाबी-करडा रंग. मानेवर विशिष्ट काळे-पांढरे ठिपके.}
+{परिसरातील वृक्षराजी आणि बागांमध्ये}
+{नेहमी जोडीने किंवा छोट्या कळपात. जमिनीवर धान्य आणि बिया खातो.}
+{झाडे आणि झुडपांमध्ये सैल घरटे.}
+{spotted-dove.jpg}
+
+\birdslide{छोटा तपकिरी होला}{Streptopelia senegalensis}
+{मैनेपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{लहान आणि नाजूक पारवा. फिकट तपकिरी रंग, मानेवर जांभळी छटा. मानेच्या बाजूंवर काळे-लाल चौकटी नमुना.}
+{परिसरातील सर्वत्र, विशेषतः मोकळ्या भागात}
+{नेहमी जोडीने दिसतो. जमिनीवर बिया वेचतो. गोड संगीतमय आवाज करतो.}
+{झुडपे आणि लहान झाडांवर साधे घरटे.}
+{little-brown-dove.jpg}
+
+\section{टिटवी आणि कोकिळे}
+\birdslide{टिटवी}{Vanellus indicus}
+{मैनेपेक्षा बरीच मोठी}
+{नेहमी आढळणारा स्थानिक}
+{मोठी टिटवी. डोळ्यांसमोर लाल मांसल वाढ विशिष्ट. तपकिरी पंख, काळे डोके व छाती, पांढरा चेहरा व तळभाग.}
+{परिसरातील मोकळ्या भागात, विशेषतः पाणवठ्यांजवळ}
+{"डिड-ही-डू-इट" या धोक्याच्या आवाजासाठी प्रसिद्ध. दिवसा-रात्री सक्रिय.}
+{जमिनीवर उथळ खड्ड्यात घरटे. खडकाळ भागात.}
+{red-wattled-lapwing.jpg}
+
+\birdslide{कोकीळ}{Eudynamys scolopacea}
+{कावळ्यापेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{नर चमकदार काळा, लाल डोळे. मादी तपकिरी, पांढरे ठिपके, खालून पट्टेदार. लिंगभेद स्पष्ट.}
+{परिसरातील सर्वत्र, विशेषतः वृक्षराजीत}
+{विशिष्ट "कू-ऊ" आवाजासाठी प्रसिद्ध. कावळ्यांच्या घरट्यात परजीवी. फळे व बेरी खातो.}
+{कावळे व इतर पक्ष्यांच्या घरट्यात परजीवी म्हणून अंडी घालतो.}
+{asian-koel.jpg}
+
+\birdslide{कारुण्य कोकीळ}{Cacomantis passerinus}
+{मैनेपेक्षा लहान}
+{उन्हाळी पाहुणा}
+{करडा पक्षी, छातीवर गडद करडा रंग, तळाशी फिकट. पिवळा डोळ्याभोवतीचा कडा विशिष्ट.}
+{परिसरातील वृक्षराजीत}
+{लपून-छपून राहतो. हळुवार शिट्टीसारखा आवाज करतो. मुख्यतः कीटक खातो.}
+{फुलपाखरे व शिंपी पक्ष्यांच्या घरट्यात परजीवी म्हणून अंडी घालतो.}
+{grey-bellied-cuckoo.jpg}
+
+\birdslide{पावश्या}{Hierococcyx varius}
+{मैनेपेक्षा बराच मोठा}
+{नेहमी आढळणारा स्थानिक}
+{शिक्र्यासारखा दिसणारा. खालून पट्टेदार. पिवळा डोळ्याभोवतीचा कडा. उडताना शिक्र्यासारखा दिसतो.}
+{परिसरातील वृक्षराजीत सर्वत्र}
+{विशिष्ट "ब्रेन-फीवर" आवाजासाठी प्रसिद्ध. कीटक व अळ्या खातो.}
+{सातभाई व इतर पक्ष्यांच्या घरट्यात परजीवी.}
+{common-hawk-cuckoo.jpg}
+
+\birdslide{भारद्वाज}{Centropus sinensis}
+{कावळ्याएवढा}
+{नेहमी आढळणारा स्थानिक}
+{मोठा काळा पक्षी. केशरी पंख व लांब शेपटी. लाल डोळे व वाकडी काळी चोच विशिष्ट.}
+{परिसरातील दाट वनस्पतीत}
+{लपून-छपून वावरतो. जमिनीवर चालताना दिसतो. खोल गुरगुरण्याचा आवाज.}
+{दाट वनस्पतीत जमिनीजवळ छतासारखे घरटे.}
+{greater-coucal.jpg}
+
+\section{पोपट}
+\birdslide{राजपोपट}{Psittacula krameri}
+{मैनेपेक्षा बराच मोठा}
+{अतिनेहमी आढळणारा स्थानिक}
+{हिरवा पोपट, लांब शेपटी. नराच्या मानेभोवती गुलाबी व काळा पट्टा, मादीला नसतो.}
+{परिसरातील सर्वत्र, विशेषतः वृक्षराजीत}
+{आवाजी, कळपवासी. मोठ्या कळपात दिसतो. फळे, बिया व धान्य खातो.}
+{डिसेंबर ते मे प्रजनन. झाडांच्या पोकळीत घरटे.}
+{rose-ringed-parakeet.jpg}
+
+\birdslide{करण पोपट}{Psittacula eupatria}
+{कावळ्याएवढा}
+{दुर्मिळ स्थानिक}
+{राजपोपटापेक्षा मोठा. जाड लाल चोच. नराला गुलाबी व काळा गळपट्टा.}
+{परिसरातील वृक्षराजीत, इतर पोपटांपेक्षा कमी}
+{राजपोपटासारखीच सवय पण जास्त सावध. फळे व बिया खातो.}
+{मोठ्या जुन्या झाडांच्या पोकळीत घरटे.}
+{alexandrine-parakeet.jpg}
+
+\birdslide{टोई पोपट}{Psittacula cyanocephala}
+{मैनेएवढा}
+{नेहमी आढळणारा स्थानिक}
+{नराचे डोके जांभळे-लाल, मादीचे निळसर-करडे. दोघांचेही शरीर हिरवे व पिवळट शेपटीचे टोक.}
+{परिसरातील वृक्षराजीत नियमित}
+{नेहमी जोडीने किंवा लहान कळपात. इतर पोपटांपेक्षा जास्त झाडावर राहतो. फळे व बिया खातो.}
+{झाडांच्या पोकळीत घरटे.}
+{plum-headed-parakeet.jpg}
+
+\section{पाकोळी आणि खंड्या}
+\birdslide{घर पाकोळी}{Apus affinis}
+{मैनेपेक्षा लहान}
+{अतिनेहमी आढळणारा स्थानिक}
+{लहान घारांडी, पांढरी कंबर व काटेरी शेपटी. गडद तपकिरी-काळा रंग.}
+{परिसरातील इमारतींच्या परिसरात}
+{हवेत तरंगत राहणारा. मोठ्या कळपात इमारतींभोवती घिरट्या घालताना दिसतो.}
+{वसाहतीत राहणारा. इमारतींच्या छपराखाली मातीचे घरटे.}
+{house-swift.jpg}
+
+\birdslide{ताड पाकोळी}{Cypsiurus balasiensis}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{घरच्या घारांडीपेक्षा लहान, बारीक शरीर व खोलगट काटेरी शेपटी. एकूण धुरकट तपकिरी.}
+{परिसरातील ताडाच्या झाडांभोवती}
+{अतिशय वेगवान उड्डाणक्षम, क्वचितच बसतो. ताडाभोवती दिसतो. हवेतील कीटक खातो.}
+{वर्षभर प्रजनन. ताडाच्या पानाखाली लाळेने घरटे चिकटवतो.}
+{asian-palm-swift.jpg}
+
+\birdslide{पांढऱ्या छातीचा धीवर}{Halcyon smyrnensis}
+{मैनेपेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{मोठा खंड्या, चमकदार निळी पाठ, चॉकलेटी डोके व पांढरी छाती. मोठी लाल चोच ठळक.}
+{परिसरातील पाणवठे व बागा}
+{ठळकपणे बसून राहतो, शिकारीसाठी झडप घालतो. मासे, बेडूक, सरडे व मोठे कीटक खातो.}
+{मार्च ते जून प्रजनन. जमिनीच्या कडेत भुयार खणून घरटे.}
+{white-breasted-kingfisher.jpg}
+
+\birdslide{सामान्य धीवर}{Alcedo atthis}
+{बुलबुलापेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{लहान खंड्या, चमकदार निळी वरची बाजू व केशरी खालची बाजू. लांब चोच व छोटी शेपटी.}
+{परिसरातील पाणवठे व तलावांजवळ}
+{पाण्यावर खाली बसून मासे पकडतो. शिकारीपूर्वी मान हलवतो.}
+{फेब्रुवारी ते एप्रिल प्रजनन. जमिनीच्या कडेत भुयार खणून घरटे.}
+{common-kingfisher.jpg}
+
+\birdslide{वेडा राघू}{Merops orientalis}
+{चिमणीपेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{बारीक हिरवा पक्षी, निळा गळा, काळी डोळ्यांची पट्टी. लांब मधली शेपटीची पिसे ठळक.}
+{परिसरातील विरळ झाडांच्या मोकळ्या भागात}
+{सुंदर उड्डाणपटू, हवेत कीटक पकडतो. तारा व उघड्या फांद्यांवर बसतो.}
+{मार्च ते जून प्रजनन. जमिनीत भुयार खणून घरटे.}
+{asian-green-bee-eater.jpg}
+
+\section{तांबट आणि बर्बेट}
+\birdslide{तांबट}{Megalaima haemacephala}
+{बुलबुलापेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{लहान, हिरवा पक्षी, किरमिजी कपाळ व गळा. पिवळा डोळ्याभोवतीचा भाग ठळक.}
+{परिसरातील वृक्षराजीत सर्वत्र}
+{धातूसारख्या 'टुक-टुक-टुक' आवाजासाठी प्रसिद्ध. मुख्यतः फळे, विशेषतः उंबर खातो.}
+{मेलेल्या झाडांच्या खोडात किंवा फांदीत घरटे खणतो.}
+{coppersmith-barbet.jpg}
+
+\section{भिंगरी आणि पंकोळी}
+\birdslide{धूसर कडा पंकोळी}{Hirundo concolor}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{लहान, गडद तपकिरी घारूळी, किंचित काटेरी शेपटी. एकसमान धुरकट रंग.}
+{परिसरातील इमारती व खडकाळ भागात}
+{हवेत कीटक पकडणारी. इमारतींजवळ उडताना दिसते.}
+{इमारतींवर व खडकांवर मातीचे वाटीसारखे घरटे.}
+{dusky-crag-martin.jpg}
+
+\birdslide{माळ भिंगरी}{Hirundo rustica}
+{चिमणीएवढी}
+{सामान्य हिवाळी पाहुणा}
+{लांब, खोल काटेरी शेपटी. वर निळसर-काळी, कपाळ व गळा तांबूस, खालून फिकी.}
+{हिवाळ्यात परिसरातील मोकळ्या भागात}
+{सुंदर उड्डाणपटू, हवेत कीटक पकडते. तारांवर बसते.}
+{परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणी.}
+{barn-swallow.jpg}
+
+\birdslide{लाल पुठ्ठ्याची भिंगरी}{Hirundo daurica}
+{चिमणीएवढी}
+{नेहमी आढळणारा स्थानिक}
+{माळ भिंगरीसारखीच पण लहान. तांबूस पुठ्ठा व मान विशिष्ट.}
+{परिसरातील मोकळ्या भागात}
+{माळ भिंगरीसारखीच कीटक खाणारी. मोठ्या कळपात उडते.}
+{पूलांखाली व इमारतींवर मातीचे घरटे.}
+{red-rumped-swallow.jpg}
+
+\birdslide{तारबाली भिंगरी}{Hirundo smithii}
+{चिमणीएवढी}
+{नेहमी आढळणारा स्थानिक}
+{निळी-काळी, पांढरी छाती. लांब तारासारखी शेपटी विशिष्ट.}
+{परिसरातील मोकळ्या भागात, विशेषतः पाणवठ्यांजवळ}
+{पाण्याजवळ उडत कीटक पकडते. तारांवर बसते.}
+{इमारती व पुलांवर मातीचे घरटे.}
+{wire-tailed-swallow.jpg}
+
+\section{खाटिक व इतर पक्षी}
+\birdslide{लांब शेपटीचा खाटीक}{Lanius schach}
+{बुलबुलापेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{करडा-तपकिरी पक्षी, काळा चेहरा व लांब शेपटी. कुंपणावर बसतो.}
+{विरळ झाडी व मोकळ्या जागांमध्ये}
+{कीटक व लहान प्राणी खातो. शिकार काट्यावर टोचून ठेवतो.}
+{काटेरी झुडपात नीटनेटके घरटे बांधतो.}
+{long-tailed-shrike.jpg}
+
+\birdslide{हळद्या}{Oriolus oriolus}
+{मैनेपेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{नर सोनेरी पिवळा, काळी पंखे व शेपटी. मादी हिरवट-पिवळी.}
+{परिसरातील वृक्षराजीत}
+{लाजाळू स्वभाव, वृक्षमुकुटात राहतो. गोड बासरीसारखा आवाज. फळे व कीटक खातो.}
+{एप्रिल ते जुलै प्रजनन. झाडावर झोळीसारखे घरटे.}
+{golden-oriole.jpg}
+
+\birdslide{कोतवाल}{Dicrurus macrocercus}
+{मैनेपेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{चमकदार काळा रंग, काटेरी शेपटी. जाड चोच व मजबूत पाय.}
+{परिसरातील सर्वत्र, विशेषतः मोकळ्या जागांमध्ये}
+{कीटक व लहान प्राणी खातो. इतर पक्ष्यांच्या आवाजाची नक्कल करतो.}
+{मार्च ते जुलै प्रजनन. बाह्य फांदीवर वाटीसारखे घरटे.}
+{black-drongo.jpg}
+
+\birdslide{राखी कोतवाल}{Dicrurus leucophaeus}
+{मैनेपेक्षा मोठा}
+{हिवाळी पाहुणा}
+{एकसमान राखाडी रंग, काटेरी शेपटी. जाड चोच.}
+{परिसरातील वृक्षराजी व मोकळे भाग}
+{कीटक व लहान प्राणी खातो. हवेतून शिकार करतो.}
+{परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+{ashy-drongo.jpg}
+
+\section{साळुंकी व मैना}
+\birdslide{साळुंकी}{Acridotheres tristis}
+{मैना}
+{नेहमी आढळणारा स्थानिक}
+{तपकिरी शरीर, काळे डोके, पिवळी चोच व पाय. उडताना पंखांवर पांढरे पट्टे दिसतात.}
+{परिसरातील सर्वत्र विपुल}
+{कळपात राहते. कीटक, फळे व मनुष्याच्या अन्नावर जगते.}
+{एप्रिल ते जुलै प्रजनन. इमारतींच्या पोकळीत घरटे.}
+{common-myna.jpg}
+
+\birdslide{जंगली मैना}{Acridotheres fuscus}
+{मैना}
+{नेहमी आढळणारा स्थानिक}
+{साळुंकीसारखी पण अधिक गडद. डोळ्यामागे पांढरा पट्टा नाही.}
+{परिसरातील वृक्षराजी व मोकळे भाग}
+{साळुंकीसारखीच सवय पण कमी मानवी वस्तीत दिसते.}
+{झाडांच्या पोकळीत घरटे.}
+{jungle-myna.jpg}
+
+\birdslide{ब्राह्मणी मैना}{Sturnia pagodarum}
+{मैनेपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{फिकट करडी, डोक्यावरचे लांब पिसे व काळी टोपी विशिष्ट. तांबूस शरीर, करडी पंखे.}
+{परिसरातील वृक्षराजी व मोकळ्या जागा}
+{कळपवासी, कीटक व फळे खाते. शिट्टीसारखा मधुर आवाज.}
+{एप्रिल ते जुलै प्रजनन. झाडांच्या व इमारतींच्या पोकळीत घरटे.}
+{brahminy-starling.jpg}
+
+\birdslide{दयाळ}{Copsychus saularis}
+{बुलबुल}
+{नेहमी आढळणारा स्थानिक}
+{नर काळा-पांढरा ठळक रंगसंगती, मादी अधिक करडी. लांब शेपटी वर धरतो.}
+{परिसरातील वृक्षराजी व बागा}
+{सुंदर गायक. जमिनीवर उड्या मारत कीटक शोधतो.}
+{मार्च ते जुलै प्रजनन. झाडाच्या पोकळीत किंवा इमारतींवर घरटे.}
+{oriental-magpie-robin.jpg}
+
+\birdslide{पांढऱ्या कंठाची नाचण}{Rhipidura albogularis}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{लहान काळा-पांढरा पक्षी, ठिपकेदार छाती, पांढरी भुवई व पंख्यासारखी शेपटी पसरून ठेवतो.}
+{परिसरातील दाट झाडी असलेले भाग}
+{नृत्य करत शिकार करतो. हवेत उडणारे कीटक पकडतो.}
+{मार्च ते जुलै प्रजनन. फांदीवर कपासारखे घरटे.}
+{spot-breasted-fantail.jpg}
+
+\section{माळरानातील पक्षी}
+\birdslide{कवड्या गप्पीदास}{Saxicola caprata}
+{बुलबुलापेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{नर काळा, पांढरी कंबर व पंखांवर पट्टे; मादी तपकिरी, खालून फिकी.}
+{परिसरातील विरळ झुडपे असलेले मोकळे भाग}
+{झुडपे व कुंपणांवर ठळकपणे बसतो. छोटी उड्डाणे करून कीटक पकडतो.}
+{मार्च ते ऑगस्ट प्रजनन. गवतात व झुडपात वाटीसारखे घरटे. ३-४ फिकट निळसर-हिरवी, तांबूस ठिपक्यांची अंडी.}
+{pied-bushchat.jpg}
+
+\birdslide{लाल बुड्या बुलबुल}{Pycnonotus cafer}
+{मैना}
+{नेहमी आढळणारा स्थानिक}
+{तपकिरी शरीर, काळे डोके, पिवळी चोच व पाय. उडताना पंखांवर पांढरे पट्टे दिसतात.}
+{परिसरातील सर्वत्र विपुल}
+{कळपात राहते. कीटक, फळे व मनुष्याच्या अन्नावर जगते.}
+{एप्रिल ते जुलै प्रजनन. इमारतींच्या पोकळीत घरटे.}
+{common-myna.jpg}
+
+\birdslide{शिपाई बुलबुल}{Pycnonotus jocosus}
+{मैना}
+{नेहमी आढळणारा स्थानिक}
+{तपकिरी शरीर, काळे डोके, पिवळी चोच व पाय. उडताना पंखांवर पांढरे पट्टे दिसतात.}
+{परिसरातील सर्वत्र विपुल}
+{कळपात राहते. कीटक, फळे व मनुष्याच्या अन्नावर जगते.}
+{एप्रिल ते जुलै प्रजनन. इमारतींच्या पोकळीत घरटे.}
+{common-myna.jpg}
+
+\birdslide{राखी सातभाई}{Turdoides malcolmi}
+{मैना}
+{नेहमी आढळणारा स्थानिक}
+{तपकिरी शरीर, काळे डोके, पिवळी चोच व पाय. उडताना पंखांवर पांढरे पट्टे दिसतात.}
+{परिसरातील सर्वत्र विपुल}
+{कळपात राहते. कीटक, फळे व मनुष्याच्या अन्नावर जगते.}
+{एप्रिल ते जुलै प्रजनन. इमारतींच्या पोकळीत घरटे.}
+{common-myna.jpg}
+
+\birdslide{टिकेलची निळी माशीमार}{Muscicapa tickelliae}
+{मैना}
+{नेहमी आढळणारा स्थानिक}
+{तपकिरी शरीर, काळे डोके, पिवळी चोच व पाय. उडताना पंखांवर पांढरे पट्टे दिसतात.}
+{परिसरातील सर्वत्र विपुल}
+{कळपात राहते. कीटक, फळे व मनुष्याच्या अन्नावर जगते.}
+{एप्रिल ते जुलै प्रजनन. इमारतींच्या पोकळीत घरटे.}
+{common-myna.jpg}
+
+\section{वटवट्या व शिंपी}
+\birdslide{राखी वटवट्या}{Prinia socialis}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{बारीक करडा पक्षी, लांब टप्प्याटप्प्यांची शेपटी. तळाशी फिकट.}
+{परिसरातील गवताळ भाग व बागा}
+{सतत हालचाल करणारा, टिक्-टिक् आवाज काढतो. कीटक खातो.}
+{मे ते सप्टेंबर प्रजनन. गवतात व झुडपात पिशवीसारखे घरटे.}
+{ashy-prinia.jpg}
+
+\birdslide{रान वटवट्या}{Prinia sylvatica}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{राखी वटवट्यापेक्षा मोठा, डोके व पाठ गडद करडी, भुवई ठळक.}
+{परिसरातील गवताळ भाग व झुडपे}
+{सतत हालचाल करत राहतो. कीटक व लहान बिया खातो.}
+{जून ते सप्टेंबर प्रजनन. गवताच्या झुंबरात चेंडूसारखे घरटे.}
+{jungle-prinia.jpg}
+
+\birdslide{शिंपी}{Orthotomus sutorius}
+{चिमणीपेक्षा बराच लहान}
+{नेहमी आढळणारा स्थानिक}
+{छोटा हिरवा पक्षी, तांबूस डोके, लांब अणकुचीदार चोच. नराला लांब शेपटी.}
+{परिसरातील बागा व झुडपांमध्ये}
+{चपळ व कसरती. पानांमध्ये फिरत कीटक खातो. टिक्-टिक् आवाज.}
+{मुख्यतः मे ते सप्टेंबर प्रजनन. जिवंत पानांना शिवून अद्भुत घरटे बनवतो.}
+{common-tailorbird.jpg}
+
+\birdslide{छोटा शुभ्रकंठी वटवट्या}{Sylvia curruca}
+{चिमणीपेक्षा लहान}
+{सामान्य हिवाळी पाहुणा}
+{करडा पक्षी, काळी टोपी व गाल, पांढरा घसा. शेपटी छोटी.}
+{परिसरातील झुडपे व दाट वनस्पती}
+{लपून-छपून राहतो. कीटक व लहान फळे खातो.}
+{परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+{lesser-whitethroat.jpg}
+
+\section{मनोली व चिमणी}
+\birdslide{चिमणी}{Passer domesticus}
+{चिमणी}
+{नेहमी आढळणारा स्थानिक}
+{नर करडा-तपकिरी, काळा गळपट्टा व तांबूस मान; मादी एकसमान तपकिरी.}
+{परिसरातील इमारती व मानवी वस्तीजवळ}
+{कळपवासी, मुख्यतः धान्य व बिया खाते.}
+{जवळपास वर्षभर प्रजनन. इमारतींच्या पोकळीत घरटे.}
+{house-sparrow.jpg}
+
+\birdslide{सुगरण}{Ploceus philippinus}
+{चिमणी}
+{नेहमी आढळणारा स्थानिक}
+{प्रजननकाळात नर चमकदार पिवळा, तपकिरी पाठ; मादी व हंगामाबाहेरील नर फिके.}
+{परिसरातील ताडाची झाडे व उंच गवत}
+{कळपवासी. मुख्यतः धान्य व गवताची बी खातो.}
+{पावसाळ्यात प्रजनन. नर अनेक टोपीसारखी घरटी बांधतो.}
+{baya-weaver.jpg}
+
+\birdslide{ठिपकेवाली मनोली}{Lonchura punctulata}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{तपकिरी पक्षी, छातीवर ठिपक्यांचे नमुने, पोट पांढरे.}
+{परिसरातील गवताळ भाग व बागांमध्ये}
+{कळपाने राहते. बिया व धान्य खाते.}
+{पावसाळ्यात प्रजनन. चेंडूसारखे घरटे बनवते.}
+{scaly-breasted-munia.jpg}
+
+\birdslide{चरक}{Copsychus fulicatus}
+{चिमणी}
+{नेहमी आढळणारा स्थानिक}
+{नर काळा, लाल शेपटीखालचा भाग; मादी तपकिरी, लाल शेपटीखालचा भाग.}
+{मोकळ्या जागा व कमी झाडी असलेला भाग}
+{जमिनीवर उड्या मारत कीटक खातो. लांब शेपटी वर करतो.}
+{मार्च ते जुलै प्रजनन. पोकळीत किंवा भेगांमध्ये घरटे.}
+{indian-robin.jpg}
+
+\birdslide{चष्मेवाला}{Zosterops palpebrosus}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{छोटा जैतुनी-हिरवा पक्षी, डोळ्याभोवती पांढरा कडा विशिष्ट. पिवळा गळा व शेपटीखालचा भाग.}
+{परिसरातील वृक्षराजी व बागांमध्ये}
+{चपळ व कसरती. छोट्या कळपात पानांमध्ये फिरतो. कीटक व मधुरस खातो.}
+{मार्च ते सप्टेंबर प्रजनन. झाडाच्या फांदीवर नीटनेटके वाटीसारखे घरटे.}
+{oriental-white-eye.jpg}
+
+\section{काकाटु व घुबडे}
+\birdslide{टकाचोर}{Dendrocitta vagabunda}
+{मैनेपेक्षा बराच मोठा}
+{नेहमी आढळणारा स्थानिक}
+{मोठा तांबूस व काळा पक्षी, लांब टप्प्याटप्प्यांची शेपटी विशिष्ट.}
+{परिसरातील वृक्षराजी व मोकळ्या जागा}
+{कीटक, फळे व अंडी खातो. बुद्धिमान व सामाजिक.}
+{मार्च ते जुलै प्रजनन. झाडाच्या फांदीवर नीटनेटके वाटीसारखे घरटे.}
+{rufous-treepie.jpg}
+
+\birdslide{कावळा}{Corvus splendens}
+{कावळा}
+{नेहमी आढळणारा स्थानिक}
+{डोक्यावर व मानेवर करडा भाग, इतरत्र काळा. जाड चोच.}
+{परिसरातील सर्वत्र}
+{बुद्धिमान व सामाजिक. विविध प्रकारचे अन्न खातो. मनुष्याच्या वस्तीजवळ राहतो.}
+{मार्च ते जुलै प्रजनन. झाडांवर मंचासारखे घरटे.}
+{house-crow.jpg}
+
+\birdslide{डोमकावळा}{Corvus macrorhynchos}
+{कावळ्यापेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{शहरी कावळ्यापेक्षा मोठा, संपूर्ण काळा, जाड चोच.}
+{परिसरातील वृक्षराजीत}
+{मांसाहारी, शिकारी. कावळ्यापेक्षा कमी सामाजिक.}
+{मार्च ते जून प्रजनन. उंच झाडांवर मोठे मंचासारखे घरटे.}
+{large-billed-crow.jpg}
+
+\birdslide{पिंगळा}{Athene brama}
+{मैनेपेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{छोटे घुबड, करडा रंग, पांढरे ठिपके. मोठे पिवळे डोळे.}
+{परिसरातील वृक्षराजी व इमारतींच्या पोकळीत}
+{रात्री सक्रिय. उंदीर व मोठे कीटक खातो.}
+{डिसेंबर ते मार्च प्रजनन. झाडांच्या व इमारतींच्या पोकळीत घरटे.}
+{spotted-owlet.jpg}
+
+\birdslide{ठिपकेवाले वन घुबड}{Strix ocellata}
+{कावळ्यापेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{मोठे घुबड, तपकिरी रंग, सर्वांगावर पांढरे ठिपके. मोठे भुवयांचे कडे.}
+{परिसरातील जुन्या वृक्षराजीत}
+{रात्री सक्रिय. लहान सस्तन प्राणी व पक्षी खातो.}
+{डिसेंबर ते मार्च प्रजनन. मोठ्या झाडांच्या पोकळीत घरटे.}
+{mottled-wood-owl.jpg}
+
+\section{धनेश व नीलकंठ}
+\birdslide{भारतीय राखी धनेश}{Ocyceros birostris}
+{कावळा}
+{नेहमी आढळणारा स्थानिक}
+{करडा पक्षी, काळी चोचीवर वाकडी वाढ. लांब पंख व टप्प्याटप्प्यांची शेपटी.}
+{परिसरातील वृक्षराजीत}
+{फळे व लहान प्राणी खातो. जोडीने राहतो. मोठा व घोगरा आवाज.}
+{एप्रिल ते जून प्रजनन. मोठ्या झाडांच्या पोकळीत घरटे.}
+{indian-grey-hornbill.jpg}
+
+\birdslide{भारतीय नीलपंख}{Coracias benghalensis}
+{मैनेपेक्षा बराच मोठा}
+{नेहमी आढळणारा स्थानिक}
+{निळा पक्षी, गुलाबी-तपकिरी छाती. उडताना पंखांवर निळे पट्टे ठळक दिसतात.}
+{परिसरातील मोकळ्या जागा व विरळ झाडी}
+{तारेवर बसून कीटक व लहान प्राणी टपतो. आकाशात कलाबाज्या करतो.}
+{मार्च ते जुलै प्रजनन. झाडांच्या पोकळीत घरटे.}
+{indian-roller.jpg}
+
+\section{कोकीळ-खाटिक व गोमेट}
+\birdslide{काळ्या डोक्याचा कोकीळ-खाटिक}{Coracina melanoptera}
+{मैनेपेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{करडा पक्षी, काळे डोके व पंख. मादी अधिक फिकी, पट्टेदार छाती.}
+{परिसरातील वृक्षराजीत}
+{लपून-छपून राहतो. फळे व कीटक खातो.}
+{एप्रिल ते जुलै प्रजनन. फांदीवर छोटे वाटीसारखे घरटे.}
+{black-headed-cuckoo-shrike.jpg}
+
+\birdslide{छोटा गोमेट}{Pericrocotus cinnamomeus}
+{चिमणी}
+{नेहमी आढळणारा स्थानिक}
+{नर काळा व नारिंगी; मादी करडी व पिवळी. दोघांनाही लांब शेपटी.}
+{परिसरातील वृक्षराजी व बागांमध्ये}
+{कळपाने राहतो. कीटक खातो. सक्रिय व चंचल.}
+{मार्च ते जून प्रजनन. फांदीवर छोटे वाटीसारखे घरटे.}
+{small-minivet.jpg}
+
+\section{फुलटोचा व धोबी}
+\birdslide{टिकेलचा फुलटोचा}{Dicaeum erythrorhynchos}
+{चिमणीपेक्षा बराच लहान}
+{नेहमी आढळणारा स्थानिक}
+{छोटा करडा पक्षी, खालून पांढरा, वर गडद. लाल चोच विशिष्ट.}
+{परिसरातील वृक्षराजीत}
+{चपळ व कसरती. फळे व फुलांमधून मधुरस खातो.}
+{वर्षभर प्रजनन. नाशपातीसारखे लटकते घरटे.}
+{tickells-flowerpecker.jpg}
+
+\birdslide{करडा धोबी}{Motacilla cinerea}
+{चिमणी}
+{सामान्य हिवाळी पाहुणा}
+{बारीक पक्षी, लांब शेपटी, करडा वरचा भाग व पिवळा खालचा भाग. सतत शेपटी हलवत राहतो.}
+{परिसरातील पाणवठे व ओलसर भागात}
+{सक्रिय शिकारी, धावत-चालत शेपटी हलवत राहतो. जमिनीवरून व हवेतून कीटक पकडतो.}
+{परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+{grey-wagtail.jpg}
+
+\birdslide{पांढरा धोबी}{Motacilla alba}
+{चिमणी}
+{सामान्य हिवाळी पाहुणा}
+{काळा-पांढरा पक्षी, करडी पाठ, पांढरा चेहरा व खालचा भाग. सतत शेपटी हलवतो.}
+{परिसरातील पाणवठे व मोकळ्या जागांमध्ये}
+{जमिनीवरून कीटक व किडे खातो. हिवाळ्यात मोठ्या संख्येने येतो.}
+{परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
+{white-wagtail.jpg}
+
+\birdslide{पांढऱ्या भुवईचा धोबी}{Motacilla maderaspatensis}
+{चिमणीपेक्षा मोठा}
+{नेहमी आढळणारा स्थानिक}
+{काळा-पांढरा पक्षी, ठळक पांढरी भुवई. सतत शेपटी हलवत राहतो.}
+{परिसरातील पाणवठे व ओलसर भागात}
+{पाण्याजवळ राहतो. कीटक व किडे खातो. जोडीने दिसतो.}
+{मार्च ते सप्टेंबर प्रजनन. भिंतींच्या व कड्यांच्या भेगांमध्ये घरटे.}
+{white-browed-wagtail.jpg}
+
+\section{सुभग व रामगंगा}
+\birdslide{सुभग}{Aegithina tiphia}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{नर काळा व पिवळा (प्रजननकाळात), जैतुनी-तपकिरी वर, पिवळी खाली. मादी हिरवट.}
+{परिसरातील फुलझाडे असलेल्या भागात}
+{अत्यंत सक्रिय, फुलांसमोर तरंगतो. लांब वाकडी चोच मधुरसासाठी.}
+{एप्रिल ते सप्टेंबर प्रजनन. फांदीत नीटनेटके वाटीसारखे घरटे.}
+{common-iora.jpg}
+
+\birdslide{कवडी रामगंगा}{Parus cinereus}
+{चिमणीपेक्षा लहान}
+{नेहमी आढळणारा स्थानिक}
+{छोटा करडा पक्षी, काळे डोके व गळपट्टा. पांढरे गाल विशिष्ट.}
+{परिसरातील वृक्षराजीत सर्वत्र}
+{सक्रिय, छोट्या कळपात वृक्षमुकुटात फिरतो. गोड शिट्टीसारखा आवाज.}
+{मार्च ते जुलै प्रजनन. झाडांच्या पोकळीत घरटे.}
+{asian-tit.jpg}
+
+\section{शिंजीर}
+\birdslide{जांभळा शिंजीर}{Cinnyris asiaticus}
+{चिमणीपेक्षा बराच लहान}
+{नेहमी आढळणारा स्थानिक}
+{नर चमकदार जांभळा-काळा, मादी फिकट करडी. दोघांनाही लांब वाकडी चोच.}
+{परिसरातील फुलझाडे असलेल्या भागात}
+{फुलांमधून मधुरस पितो. हवेत तरंगत राहतो.}
+{वर्षभर प्रजनन. नाशपातीसारखे लटकते घरटे.}
+{purple-sunbird.jpg}
+
+\birdslide{जांभळ्या पुठ्ठ्याचा शिंजीर}{Leptocoma zeylonica}
+{चिमणीपेक्षा बराच लहान}
+{नेहमी आढळणारा स्थानिक}
+{नर जांभळा-हिरवा चमकदार, पुठ्ठा जांभळा; मादी फिकट पिवळी.}
+{परिसरातील फुलझाडे असलेल्या भागात}
+{फुलांमधून मधुरस पितो. हवेत तरंगत राहतो.}
+{मुख्यतः फेब्रुवारी ते मे प्रजनन. झोळीसारखे लटकते घरटे.}
+{purple-rumped-sunbird.jpg}
+
+% Add the final frame again
 \begin{frame}{योगदान कसे करावे}
     \begin{itemize}
         \item {\latintext eBird} वर पक्षी नोंदी करा
